[workspace]
members = [
    "libzkbob-rs-wasm",
    "libzkbob-rs",
    "libzkbob-rs-node",
    "libs/kvdb-web",
]

default-members = [
    "libzkbob-rs",
    "libzkbob-rs-node",
    "libs/kvdb-web",
]

[patch.crates-io]
fawkes-crypto-zkbob = { git = "https://github.com/zkbob//fawkes-crypto", branch = "feature/preparse_gates" }

[patch."https://github.com/zkbob/fawkes-crypto"]
fawkes-crypto-zkbob = { git = "https://github.com/zkbob//fawkes-crypto", branch = "feature/preparse_gates" }