[workspace]
members = [
    "libzkbob-rs-wasm",
    "libzkbob-rs",
    "libzkbob-rs-node",
    "libs/kvdb-web",
]

default-members = [
    "libzkbob-rs",
    "libzkbob-rs-node",
    "libs/kvdb-web",
]

[patch."https://github.com/zkbob/libzeropool-zkbob"]
libzeropool = { git = "https://github.com/zkbob//libzeropool-zkbob", branch = "enc-memo-message-tune", package = "libzeropool-zkbob" }

[patch.crates-io]
libzeropool = { git = "https://github.com/zkbob//libzeropool-zkbob", branch = "enc-memo-message-tune", package = "libzeropool-zkbob" }