[package]
name = "libzkbob-rs-node"
version = "1.0.0"
authors = ["Dmitry Vdovin <voidxnull@gmail.com>"]
repository = "https://github.com/zkBob/libzkbob-rs/"
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
libzkbob-rs = { version = "1.4.0", features = ["native"] }
#libzkbob-rs = { path = "../libzkbob-rs", features = ["native"] }
neon = { version = "0.10.0", default-features = false, features = ["channel-api", "napi-6", "promise-api", "task-api"] }
# FIXME: Using a random fork for now
neon-serde = { package = "neon-serde3", version = "0.10" }
serde = "1.0.136"
hex = "0.4.3"

[dependencies.fawkes-crypto]
git = "https://github.com/zkbob/fawkes-crypto"
branch = "master"
package = "fawkes-crypto-zkbob"
version = "4.6.0"
features = ["multicore"]    